--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
-        "cub3d.h": "c",
-        "mlx.h": "c"
-    }
+		"cub3d.h": "c",
+		"mlx.h": "c",
+		"math.h": "c"
+	}
 }
